update the collection filtering by the key to use in the federated service